<resources>
    <string name="app_name">WOTPlus</string>
    <string name="action_settings">设置</string>

    <string name="nav_home">首页</string>
    <string name="nav_achieve">成就</string>
    <string name="nav_count">统计</string>
    <string name="nav_level">等级</string>
    <string name="nav_vehicle">战车</string>
    <string name="nav_xvm">XVM</string>
    <string name="nav_about">关于</string>


    <string name="badge">战斗嘉奖</string>
    <string name="record">总分</string>
    <string name="count">场均战绩</string>
    <string name="max">最高战斗数据</string>

    <!--战斗嘉奖-->
    <string name="class_ace">特级</string>
    <string name="class_1">一级</string>
    <string name="class_2">二级</string>
    <string name="class_3">三级</string>

    <!--最高战斗数据-->
    <string name="max_kill">单次战斗最多击毁</string>
    <string name="max_exp">单次战斗最大经验</string>
    <string name="max_hit">单次战斗最大伤害</string>

    <!--总分-->
    <string name="fight">战斗</string>
    <string name="victory">胜利</string>
    <string name="failure">失败</string>
    <string name="survive">幸存</string>

    <string name="damage_coefficient">杀伤率</string>
    <string name="frags_count_coefficient">战损比</string>
    <string name="damage_blocked_coefficient">装甲特性</string>
    <string name="capture_points">占领基地点数</string>
    <string name="dropped_capture_points">基地防守得分</string>

    <!---->
    <string name="exp">经验</string>
    <string name="aveexp">场均经验</string>
    <string name="maxexp">单次获得最大经验</string>
    <string name="destroy">击毁</string>
    <string name="find">发现</string>
    <string name="hitrate">命中率</string>
    <string name="hitnum">杀伤</string>
    <string name="avehit">战斗造成的平均伤害</string>
    <string name="occupied_base">占领基地点数</string>
    <string name="defend_base">基地防守得分</string>

    <!--场均战绩-->
    <string name="damage_dealt_avg">杀伤</string>
    <string name="damage_received_avg">受到伤害</string>
    <string name="stun_num_avg">弹震次数</string>
    <string name="damage_assisted_avg">由您协助造成的伤害</string>
    <string name="damage_assisted_stun_avg">对受到您弹震影响的敌方坦克造成的伤害</string>
    <string name="spotted_count_avg">点亮敌方坦克</string>
    <string name="frags_count_avg">击毁敌方坦克</string>


    <!--战车信息统计-->
    <string name="tankdestroy">击毁</string>
    <string name="desdeadrate">击毁/死亡率</string>
    <string name="hitrecirate">造成/受到伤害</string>
    <string name="perdestroy">每场战斗平均击毁战车数</string>
    <string name="perhitnum">每场战斗平均伤害值</string>

    <!--设置与关于-->
    <string name="can_not_find_version_name">找不到版本号</string>

    <string name="readme">https://github.com/zhangxx0/WOTPlus/blob/master/README.md</string>
    <!--放置豌豆荚的地址-->
    <string name="data_sourse">数据来源于坦克世界官网</string>
    <string name="share_txt">欢迎使用“WOTPlus”，查询坦克世界战绩，您可以在http://fir.im/rlps下载</string>
    <string name="share_app">分享-WOTPlus</string>
    <string name="app_html">https://github.com/zhangxx0/WOTPlus</string>
    <string name="alipay">377241804@qq.com</string>
    <string name="license">Copyright 2016 Zhangxx  Licensed under the Apache License, Version 2.0 (the \"License\"); you
        may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <!--XVM相关-->
    <string name="wotjungong">http://wot.kongzhong.com/ztm/whm/index.html</string>
    <string name="wotbaibaoxiang">http://nbx.kongzhong.com/r/i/160302171518</string>

    <!--勋章ID、名称对照-->
    <string name="geniusforwarmedal">战争机器</string>
    <string name="wolfamongsheepmedal">伤害大师</string>
    <string name="warrior">勇士</string>
    <string name="maingun">伤害手</string>
    <string name="supporter">火力支援</string>
    <string name="sniper2">狙击手</string>
    <string name="evileye">巡逻兵</string>
    <string name="falloutdiehard">坚不可摧</string>
    <string name="steelwall">不死鸟</string>
    <string name="defender">护旗手</string>
    <string name="invader">夺旗手</string>
    <string name="scout">尖兵</string>
    <string name="bannerman">协同者</string>
    <string name="champion">第一滴血</string>
    <string name="victorymarch">3月胜利</string>
    <string name="tacticaladvantage">运筹帷幄</string>
    <string name="tacticalbreakthrough">战术大师</string>
    <string name="willtowinspirit">必胜意志</string>
    <string name="promisingfightermedal">奋斗者</string>
    <string name="heavyfiremedal">火力手</string>
    <string name="fightingreconnaissancemedal">侦察手</string>
    <string name="fireandsteelmedal">百炼精钢</string>
    <string name="crucialshotmedal">最后一击</string>
    <string name="rangermedal">西奥多</string>
    <string name="guerrillamedal">游击手</string>
    <string name="prematuredetonationmedal">爆破手</string>
    <string name="bruteforcemedal">暴力手</string>
    <string name="pyromaniacmedal">纵火手</string>
    <string name="sentinelmedal">守卫者</string>
    <string name="infiltratormedal">渗透者</string>
    <string name="reliablecomrade">并肩作战</string>
    <string name="fighter">战斗狂人</string>
    <string name="duelist">决斗者</string>
    <string name="diehard">幸运之星</string>
    <string name="aloneinthefield">独行者</string>
    <string name="medalantispgfire">鹰眼</string>
    <string name="medalcoolblood">冷血杀手</string>
    <string name="invincible">火凤凰</string>
    <string name="impenetrable">坚如磐石</string>
    <string name="kamikaze">敢死队员</string>
    <string name="effectivesupport">有效支援</string>
    <string name="predator">掠夺者</string>
    <string name="unreachable">各位，请向国王致敬！</string>
    <string name="raider">隐身者</string>
    <string name="aimer">观察手</string>
    <string name="bombardier">炮手</string>
    <string name="shoottokill">支援手</string>
    <string name="handofdeath">炮王</string>
    <string name="mousebane">老鼠夹子</string>
    <string name="pattonvalley">巴顿猎手</string>
    <string name="beasthunter">猎人</string>
    <string name="sinai">西奈雄狮</string>
    <string name="armorpiercer">重炮手</string>
    <string name="titlesniper">速射手</string>
    <string name="counterblow">以牙还牙</string>
    <string name="crusher">要塞克星</string>
    <string name="mechanicengineer">W.o.T精英</string>
    <string name="tankexpert">坦克克星</string>
    <string name="mechanicengineer6">R系精英</string>
    <string name="mechanicengineer4">F系精英</string>
    <string name="mechanicengineer5">Y系精英</string>
    <string name="mechanicengineer2">M系精英</string>
    <string name="mechanicengineer3">C系精英</string>
    <string name="mechanicengineer0">S系精英</string>
    <string name="mechanicengineer1">D系精英</string>
    <string name="tankexpert0">S系坦克克星</string>
    <string name="tankexpert3">C系坦克克星</string>
    <string name="tankexpert2">M系坦克克星</string>
    <string name="tankexpert1">D系坦克克星</string>
    <string name="tankexpert6">R系坦克克星</string>
    <string name="tankexpert5">Y系坦克克星</string>
    <string name="tankexpert4">F系坦克克星</string>
    <string name="heroesofrassenay">拉森尼埃英雄勋章</string>
    <string name="medallafayettepool">普尔勋章</string>
    <string name="medalradleywalters">拉德利 沃尔特斯 勋章</string>
    <string name="huntsman">西奥多</string>
    <string name="medalkolobanov">临危不惧</string>
    <string name="medalgore">刺血勋章</string>
    <string name="medalnikolas">尼克斯勋章</string>
    <string name="medaloskin">奥斯丁勋章</string>
    <string name="medallehvaslaiho">雷哈瓦希莱洛勋章</string>
    <string name="medalorlik">奥利克勋章</string>
    <string name="medalhalonen">哈罗恩勋章</string>
    <string name="medaltamadayoshio">“高克”勋章</string>
    <string name="medalburda">布尔德勋章</string>
    <string name="medaldumitru">杜米特鲁勋章</string>
    <string name="medalpascucci">帕斯库奇勋章</string>
    <string name="medaldelanglade">拉格兰勋章</string>
    <string name="medaltarczay">塔西亚勋章</string>
    <string name="medalbrunopietro">布鲁诺勋章</string>
    <string name="medalbillotte">比洛特勋章</string>
    <string name="medalstark">斯塔克勋章</string>
    <string name="medalfadin">法丁勋章</string>
    <string name="tacticalskill">战略大师</string>
    <string name="secretoperations">突袭</string>
    <string name="medalcrucialcontribution">战场精英</string>
    <string name="medalbrothersinarms">兄弟连</string>
    <string name="armoredfist">钢铁班</string>
    <string name="shouldertoshoulder">协同作战</string>
    <string name="nomansland">燃烧殆尽</string>
    <string name="even">以眼还眼</string>
    <string name="charmed">上帝之手</string>
    <string name="bonecrusher">破坏者</string>
    <string name="demolition">爆破专家</string>
    <string name="arsonist">纵火者</string>
    <string name="kingofthehill">幸运手</string>
    <string name="godofwar">战争之神</string>
    <string name="medalmonolith">坚如磐石</string>
    <string name="ironman">沉着冷静</string>
    <string name="sturdy">斯巴达勇士</string>
    <string name="luckydevil">幸运儿</string>
    <string name="tankwomen">女人的战争</string>
    <string name="firstmerit">第一功绩</string>
    <string name="fallenflags">夺旗者</string>
    <string name="medalkay1">凯斯勋章 一级</string>
    <string name="medalcarius1">卡利乌斯勋章 一级</string>
    <string name="medalekins1">阿肯斯勋章 一级</string>
    <string name="medalknispel1">科尼斯佩尔勋章 一级</string>
    <string name="medalabrams1">艾布拉姆斯勋章 一级</string>
    <string name="medalpoppel1">波佩勋章 一级</string>
    <string name="medalleclerc1">雷克斯克勋章 一级</string>
    <string name="medallavrinenko2">拉维尼克勋章 二级</string>
    <string name="winnerlaurels4">第五胜利 四级</string>
    <string name="stormlord4">瓦尔基里 四级</string>
    <string name="fortacticaloperations4">战术勋章 四级</string>
    <string name="battletested4">战争洗礼 四级</string>
    <string name="medalrotmistrov4">洛多米斯托夫勋章 四级</string>
    <string name="fireandsword4">火与剑 四级</string>
    <string name="kampfer4">突击者 四级</string>
    <string name="conqueror4">占领者 四级</string>
    <string name="soldieroffortune4">钢铁游侠 四级</string>
    <string name="readyforbattlelt4">优异成绩:轻型坦克</string>
    <string name="readyforbattlemt3">优异成绩:中型坦克</string>
    <string name="readyforbattleht3">优异成绩:重型坦克</string>
    <string name="readyforbattleatspg3">优异成绩:自行反坦克炮</string>
    <string name="readyforbattlespg4">优异成绩:自行火炮</string>
    <string name="sniper">神炮手</string>
    <string name="medalwittmann">鲍尔特勋章</string>
    <string name="testartilleryman">火箭大师</string>


</resources>
