<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_achieve"
            android:icon="@drawable/ic_achieve"
            android:title="@string/nav_achieve" />
        <item
            android:id="@+id/nav_count"
            android:icon="@drawable/ic_count"
            android:title="@string/nav_count" />
        <item
            android:id="@+id/nav_level"
            android:icon="@drawable/ic_level"
            android:title="@string/nav_level" />
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_vehivle"
            android:title="@string/nav_vehicle" />
    </group>

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/action_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/nav_about" />
            </group>
        </menu>
    </item>

</menu>
